plang/testing/logs/false-incorrect/146/program146.p.p
s Ky T (jxe (o8) (PM)) (R).

a (c QjnON (FJ)) (mTZ (E)) (l eO6 a1h Qyis X) :- qZsB (cOgt (cG fd) (wLlFV (M0M) (v E8qv aY94 NbcE FVG) f (NQuKQ))) (rR (x (J) Yugb (P) Ge0)), h (oXne x) (dDU).

km gHG2y GmNu (lP6 (jngl (PmVKx) (aUIi Et QILTd U)) BC (vugJ) Ha) bZ6LD :- (((hg beiRc); l (aEu4c) ux, mdd (vo7o (emwOL (QBhk) (vw0nG m) (WDoR))) V0)); (lya TkS).

v (I8) slnm3 :- (gh aj0p n (uv (jr (f (HUz) dbYnn ebiLH)) B HYG Cq), (((oFGU)))).

uil (EKH6c) :- (iPDI2 (UfsLk) (K1) pds t0); (nNa (LX) OAk, gOKks, reE (t8X) (bqz1v Jaa0v), m jbt1E o0l (Pgj)), (beL w (OXWcs) (Y) kUKkT; jIt B HAxw).
v5u.


wx :- (pq xnu), gX (Itm) (MlVQ).
o ULP s4bju (gdx).


? (c5H (pwP3 (Y) DA3N (Nd) u8W3V) sD).


